deploy/kustomize/control-plane/overlays/openshift/route/psp/keycloak-postgresql-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-postgresql
spec:
  template:
    spec:
      securityContext:
        runAsNonRoot: true
