deploy/kustomize/control-plane/overlays/openshift/route/psp/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: cno-api
  name: cno-api
  namespace: $(NAMESPACE)
spec:
  host: cno-api.$(DOMAIN)
  to:
    kind: Service
    name: cno-api
    weight: 100
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: cno-ui
  name: cno-ui
  namespace: $(NAMESPACE)
spec:
  host: cno.$(DOMAIN)
  to:
    kind: Service
    name: cno-ui
    weight: 100
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
